--- a/style.css
+++ b/style.css
@@ -54,13 +54,19 @@ a.btn {
 }
 a.btn:hover {
 	background-image: -webkit-linear-gradient(#2670a8 0%, #144469 100%);
+	background-image: -moz-linear-gradient(#2670a8 0%, #144469 100%);
+	background-image: linear-gradient(#2670a8 0%, #144469 100%);
 }
 
 a.btn.green {
 	background-image: -webkit-linear-gradient(#32c766 0%, #188e34 100%);
+	background-image: -moz-linear-gradient(#32c766 0%, #188e34 100%);
+	background-image: linear-gradient(#32c766 0%, #188e34 100%);
 }
 a.btn.green:hover {
 	background-image: -webkit-linear-gradient(#22ab52 0%, #15752b 100%);
+	background-image: -moz-linear-gradient(#22ab52 0%, #15752b 100%);
+	background-image: linear-gradient(#22ab52 0%, #15752b 100%);
 }
 
 #main {
