--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-	background-image: url(images/old_mathematics.png);
+	background-image: url('images/old_mathematics.png');
 	margin-top: 40px;
 	margin-bottom: 20px;
 	font-family: Helvetica;
 }
 div.separator {
-	background-image: url(images/separator.png);
+	background-image: url('images/separator.png');
 	margin: 6px auto;
 	width: 600px;
 	height: 2px;
