Revert "no bottom padding"
This reverts commit e7c71146c406061fabd93dc9f4a71c2dd8734bd1.

--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ a.btn.green:hover {
 	background-image: linear-gradient(#22ab52 0%, #15752b 100%);
 }
 
+#main {
+	padding-bottom: 14px;
+}
 #main div.left {
 	width: 128px;
 	padding-top: 30px;
