--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ a.btn {
 	padding: 6px 10px;
 	margin-right: 6px;
 	border: 1px #666666 solid;
-	background-image: -webkit-linear-gradient(#3a95db 0%, #2a6c9d 100%);
-	background-image: -moz-linear-gradient(#3a95db 0%, #2a6c9d 100%);
-	background-image: linear-gradient(#3a95db 0%, #2a6c9d 100%);
+	background-image: -webkit-linear-gradient(#186cc7 0%, #0d3b6e 100%);
+	background-image: -moz-linear-gradient(#186cc7 0%, #0d3b6e 100%);
+	background-image: linear-gradient(#186cc7 0%, #0d3b6e 100%);
 	color: white;
 	font-size: 14px;
 	text-shadow: 1px 1px 1px black;
@@ -59,9 +59,9 @@ a.btn:hover {
 }
 
 a.btn.yellow {
-	background-image: -webkit-linear-gradient(#dac30e 0%, #ab8b0b 100%);
-	background-image: -moz-linear-gradient(#dac30e 0%, #ab8b0b 100%);
-	background-image: linear-gradient(#dac30e 0%, #ab8b0b 100%);
+	background-image: -webkit-linear-gradient(#eebd2d 0%, #836818 100%);
+	background-image: -moz-linear-gradient(#eebd2d 0%, #836818 100%);
+	background-image: linear-gradient(#eebd2d 0%, #836818 100%);
 }
 a.btn.yellow:hover {
 	background-image: -webkit-linear-gradient(#b9a50a 0%, #937809 100%);
@@ -70,9 +70,9 @@ a.btn.yellow:hover {
 }
 
 a.btn.green {
-	background-image: -webkit-linear-gradient(#32c766 0%, #188e34 100%);
-	background-image: -moz-linear-gradient(#32c766 0%, #188e34 100%);
-	background-image: linear-gradient(#32c766 0%, #188e34 100%);
+	background-image: -webkit-linear-gradient(#5e9824 0%, #335413 100%);
+	background-image: -moz-linear-gradient(#5e9824 0%, #335413 100%);
+	background-image: linear-gradient(#5e9824 0%, #335413 100%);
 }
 a.btn.green:hover {
 	background-image: -webkit-linear-gradient(#22ab52 0%, #15752b 100%);
