--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ a.btn {
 	padding: 6px 10px;
 	margin-right: 6px;
 	border: 1px #666666 solid;
-	background-image: -webkit-linear-gradient(#186cc7 0%, #0d3b6e 100%);
-	background-image: -moz-linear-gradient(#186cc7 0%, #0d3b6e 100%);
-	background-image: linear-gradient(#186cc7 0%, #0d3b6e 100%);
+	background-image: -webkit-linear-gradient(#3a85dc 0%, #204979 100%);
+	background-image: -moz-linear-gradient(#3a85dc 0%, #204979 100%);
+	background-image: linear-gradient(#3a85dc 0%, #204979 100%);
 	color: white;
 	font-size: 14px;
 	text-shadow: 1px 1px 1px black;
