--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a.btn:hover {
 
 a.btn.yellow {
 	background-image: -webkit-linear-gradient(#e3b42b 0%, #7d6317 100%);
-	background-image: -moz-linear-gradient#e3b42b 0%, #7d6317 100%);
+	background-image: -moz-linear-gradient(#e3b42b 0%, #7d6317 100%);
 	background-image: linear-gradient(#e3b42b 0%, #7d6317 100%);
 }
 a.btn.yellow:hover {
