--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ div.footer p {
 	margin-bottom: 20px;
 	text-align: center;
 	text-shadow: 0 1px 1px white;
-	font-size: 13px;
+	font-size: 12px;
+	color: #404040;
 }
 div.footer p a {
 	color: #275c98;
