experimenting with fonts

--- a/style.css
+++ b/style.css
@@ -103,7 +103,8 @@ a.btn.green:hover {
 	margin-top: 8px;
 }
 #main p {
-	font-size: 14px;
+font-family: "calluna-sans";
+	font-size: 15px;
 	line-height: 1.4em;
 }
 div.column {
