experimenting with fonts

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ a.btn.green:hover {
 	margin-top: 8px;
 }
 #main p {
-font-family: "calluna-sans";
+	font-family: "nimbus-sans";
 	font-size: 15px;
 	line-height: 1.4em;
 }
