--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-	background-image: url('images/old_mathematics.png');
+	background-image: url(http://subtlepatterns.com/patterns/noisy_grid_@2X.png);
+	background-size: 150px;
 	margin-top: 40px;
 	margin-bottom: 20px;
 	font-family: Helvetica;
