--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-	background-image: url(http://subtlepatterns.com/patterns/noisy_grid_@2X.png);
-	background-size: 150px;
+	background-image: url("images/noisy_grid.png");
 	margin-top: 40px;
 	margin-bottom: 20px;
 	font-family: Helvetica;
