--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ a.btn.green:hover {
 	font-size: 20px;
 	color: gray;
 	margin-top: 4px;
+	margin-bottom: 16px;
 }
 #main p {
 	font-family: "nimbus-sans";
