--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ a.btn:hover {
 }
 
 a.btn.green {
-	background-image: -webkit-linear-gradient(#40e42d 0%, #35cc20 100%);
-	background-image: -moz-linear-gradient(#40e42d 0%, #35cc20 100%);
-	background-image: linear-gradient(#40e42d 0%, #35cc20 100%);
+	background-image: -webkit-linear-gradient(#33c41f 0%, #2aa817 100%);
+	background-image: -moz-linear-gradient(#33c41f 0%, #2aa817 100%);
+	background-image: linear-gradient(#33c41f 0%, #2aa817 100%);
 }
 a.btn.green:hover {
 	background-image: -webkit-linear-gradient(#4f8c16 0%, #28450e 100%);
