--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ a.btn {
 	border-radius: 6px;
 }
 a.btn:hover {
-	background-image: -webkit-linear-gradient(#2358af 0%, #142d55 100%);
-	background-image: -moz-linear-gradient(#2358af 0%, #142d55 100%);
-	background-image: linear-gradient(#2358af 0%, #142d55 100%);
+	background-image: -webkit-linear-gradient(#2d6dd0 0%, #204eaf 100%);
+	background-image: -moz-linear-gradient(#2d6dd0 0%, #204eaf 100%);
+	background-image: linear-gradient(#2d6dd0 0%, #204eaf 100%);
 }
 
 a.btn.green {
@@ -65,9 +65,9 @@ a.btn.green {
 	background-image: linear-gradient(#33c41f 0%, #2aa817 100%);
 }
 a.btn.green:hover {
-	background-image: -webkit-linear-gradient(#4f8c16 0%, #28450e 100%);
-	background-image: -moz-linear-gradient(#4f8c16 0%, #28450e 100%);
-	background-image: linear-gradient(#4f8c16 0%, #28450e 100%);
+	background-image: -webkit-linear-gradient(#33c41f 0%, #2aa817 100%);
+	background-image: -moz-linear-gradient(#33c41f 0%, #2aa817 100%);
+	background-image: linear-gradient(#33c41f 0%, #2aa817 100%);
 }
 
 #main {
