--- a/style.css
+++ b/style.css
@@ -65,9 +65,9 @@ a.btn.green {
 	background-image: linear-gradient(#33c41f 0%, #2aa817 100%);
 }
 a.btn.green:hover {
-	background-image: -webkit-linear-gradient(#33c41f 0%, #2aa817 100%);
-	background-image: -moz-linear-gradient(#33c41f 0%, #2aa817 100%);
-	background-image: linear-gradient(#33c41f 0%, #2aa817 100%);
+	background-image: -webkit-linear-gradient(#2cb117 0%, #259112 100%);
+	background-image: -moz-linear-gradient(#2cb117 0%, #259112 100%);
+	background-image: linear-gradient(#2cb117 0%, #259112 100%);
 }
 
 #main {
